# TouchpadVolumeControl

./: CMakeLists.txt  README.md  main.cpp
Audio/: AudioHandler.cpp  AudioHandler.hpp  CMakeLists.txt
Device/: CMakeLists.txt  TouchpadListener.cpp  TouchpadListener.hpp
licenses/: LICENSE.libevdev
